updated some sentences

--- a/binary to decimal .ipynb
+++ b/binary to decimal .ipynb
@@ -9,8 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter a binary number: 1101\n",
-      "the decimal number is 13\n"
+      "Enter a Binary number: 1101\n",
+      "The decimal number is 13\n"
      ]
     }
    ],
@@ -37,7 +37,7 @@
     "for y in range(0, len(h)):\n",
     "    bisum= bisum + h[int(y)]\n",
     "    \n",
-    "print('the decimal number is '+str(bisum))\n",
+    "print('The Decimal number is: '+str(bisum))\n",
     "    "
    ]
   },
