Update binary to decimal .ipynb

--- a/binary to decimal .ipynb
+++ b/binary to decimal .ipynb
@@ -16,7 +16,7 @@
    ],
    "source": [
     "# binary to decimal converter\n",
-    "x= input('enter a binary number: ')\n",
+    "x= input('Enter a Binary number: ')\n",
     "    \n",
     "l= []\n",
     "\n",
