Update quadratic roots .ipynb

--- a/quadratic roots .ipynb
+++ b/quadratic roots .ipynb
@@ -34,7 +34,7 @@
     "        print('the roots are distinct and real')\n",
     "        \n",
     "# finding the roots based on discriminants\n",
-    "def roots(a,b,c):\n",
+    "def quadratic_roots(a,b,c):\n",
     "    discriminant(a,b,c)\n",
     "    x1 = (-b + mt.sqrt(b*b-4*a*c))/2*a\n",
     "    x2 = (-b - mt.sqrt(b*b-4*a*c))/2*a\n",
@@ -47,7 +47,7 @@
     "w= int(input('enter the constant: '))\n",
     "\n",
     "# calling the function \n",
-    "roots(u,v,w)"
+    "quadratic_roots(u,v,w)"
    ]
   },
   {
